# LLMs-Week-5-Lab

./: $null  .gitignore  00_Environment_Setup_and_Local_Model_Guide.md  EXECUTION.md  Lab 5 Requirements.txt  README.md  pyproject.toml  report.json
data/: review_subset.json
src/first_crew/: crew.py  main.py
src/first_crew/config/: agents.yaml  tasks.yaml
