[project]
name = "first_crew"
version = "0.1.0"
description = "Lab 5 - Local CrewAI Pipeline for Yelp Analytics"
authors = [{ name = "saraaburomoh", email = "saraaburomoh@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "cohere>=5.20.7",
    "crewai[google-genai,tools]==1.9.3",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "litellm>=1.75.3",
    "sentence-transformers>=5.3.0",
    "fastapi>=0.115.0",
    "apscheduler>=3.10.4",
    "email-validator>=2.2.0",
    "langchain-huggingface>=1.2.1",
    "fastapi-sso>=0.21.0",
    "ollama>=0.6.1",
]

[project.scripts]
first_crew = "first_crew.main:run"
run_crew = "first_crew.main:run"
train = "first_crew.main:train"
replay = "first_crew.main:replay"
test = "first_crew.main:test"
run_with_trigger = "first_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/first_crew"]

[tool.crewai]
type = "crew"
